Add second language

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,45 @@
 {
-    "TOTAL_ITEMS" : "Total items"
-}
+    "TOTAL_ITEMS" : "Total elements",
+    "PHOTO_ID" : "Photo ID",
+    "PUBLICATION_DATE" : "Date of publication",
+    "AUTHOR" : "Author",
+    "VIEW" : "View",
+    "IMAGE" : "image",
+    "SEARCH_TERM" : "search term",
+    "IMAGE_ORIENTATION": "image orientation",
+    "SHOW_ALL_HISTORY_ITEMS" : "Show all history items",
+    "SHOW_HISTORY_SEARCH" : "Show history",
+    "SEARCH_HISTORY" : "Search history",
+    "CHANGE_LAYOUT" : "Change layout",
+    "CHANGE_THEME" : "Change theme",
+    "ADVANCED_SETTINGS" : "Advanced settings",
+    "ADVANCED_SETTINGS_ALERT" : "Belows settings will be not saved in local storage",
+    "CHOOSE_IMAGE_DETAILS_MODE" : "Choose view details mode",
+    "CROP_DESCRIPTION_AFTER_SECOND_LINE": "Clip description after second line",
+    "DISABLE_THUMBNAILS_FIT" : "Disable thumbnails fit",
+    "PAGE" : "Page",
+    "FROM" : "from",
+    "NO_IMAGES" : "There is no images",
+    "IMAGE_DETAILS" : "Image details",
+    "DESCRIPTION" : "Description",
+    "USERNAME" : "Username",
+    "WEBSITE" : "Website",
+    "CREATED_AT" : "Created at",
+    "UPDATED_AT" : "Updated at",
+    "WIDTH" : "Width",
+    "HEIGHT" : "Height",
+    "COLOR" : "Color",
+    "DOWNLOADS" : "Downloads",
+    "LIKES" : "Liked",
+    "LOCATION" : "Location",
+    "CLOSE_MODAL" : "Close",
+    "FEEL_FREE_TO_USE" : "Feel free to use",
+    "LOADING_PLEASE_WAIT" : "loading, please wait",
+    "PORTRAIT" : "Portrait",
+    "LANDSCAPE" : "Landscape",
+    "SQUARISH" : "Squarish",
+    "SHOW_MODAL_DETAILS" : "SHow modal with details",
+    "OPEN_IN_NEW_TAB" : "Open in new tab",
+    "SHOW_IFRAME" : "Display details in iframe",
+    "EXAMPLE_SEARCH_TERM" : "eg. waterfall"
+} 
