--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -15,7 +15,7 @@
     "ADVANCED_SETTINGS" : "Zaawansowane ustawienia",
     "ADVANCED_SETTINGS_ALERT" : "Poniższe ustawienia nie są zapisywane w pamięci podręcznej!",
     "CHOOSE_IMAGE_DETAILS_MODE" : "Wybierz sposób wyświetlania szczegółów",
-    "CROP_DESCRIPTION_AFTER_SECOND_LINE": "Skróć opisy do dwóch linijek",
+    "CROP_DESCRIPTION_AFTER_SECOND_LINE": "Skróć opisy do dwóch linijek w widoku siatki",
     "DISABLE_THUMBNAILS_FIT" : "Zablokuj dopasowanie miniaturek",
     "PAGE" : "Strona",
     "FROM" : "z",
