--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -1,46 +1,49 @@
 {
-    "TOTAL_ITEMS" : "Znalezione elementy",
-    "PHOTO_ID" : "Identyfikator",
-    "PUBLICATION_DATE" : "Data publikacji",
-    "AUTHOR" : "Autor",
-    "VIEW" : "Zobacz",
-    "IMAGE" : "obraz",
-    "SEARCH_TERM" : "szukana fraza",
-    "IMAGE_ORIENTATION": "orientacja obrazka",
-    "SHOW_ALL_HISTORY_ITEMS" : "Pokaż wszystkie wyniki historii wyszukiwania",
-    "SHOW_HISTORY_SEARCH" : "Pokaż historię wyszukiwania",
-    "SEARCH_HISTORY" : "Historia wyszukiwania",
-    "CHANGE_LAYOUT" : "Zmień układ listy",
-    "CHANGE_THEME" : "Zmień kolorystykę",
-    "ADVANCED_SETTINGS" : "Zaawansowane ustawienia",
-    "ADVANCED_SETTINGS_ALERT" : "Poniższe ustawienia nie są zapisywane w pamięci podręcznej!",
-    "CHOOSE_IMAGE_DETAILS_MODE" : "Wybierz sposób wyświetlania szczegółów",
-    "CROP_DESCRIPTION_AFTER_SECOND_LINE": "Skróć opisy do dwóch linijek w widoku siatki",
-    "DISABLE_THUMBNAILS_FIT" : "Zablokuj dopasowanie miniaturek",
-    "PAGE" : "Strona",
-    "FROM" : "z",
-    "NO_IMAGES" : "Nie znaleziono obrazków spełniających Twoje kryteria",
-    "IMAGE_DETAILS" : "Szczegóły obrazka",
-    "DESCRIPTION" : "Opis",
-    "USERNAME" : "Nazwa użytkownika",
-    "WEBSITE" : "Strona internetowa",
-    "CREATED_AT" : "Utworzono",
-    "UPDATED_AT" : "Zaktualizowano",
-    "WIDTH" : "Szerokość",
-    "HEIGHT" : "Wysokość",
-    "COLOR" : "Kolor",
-    "DOWNLOADS" : "Liczba pobrań",
-    "LIKES" : "Liczba polubień",
-    "LOCATION" : "Lokalizacja",
-    "CLOSE_MODAL" : "Zamknij",
-    "FEEL_FREE_TO_USE" : "Smiało korzystaj z",
-    "LOADING_PLEASE_WAIT" : "Trwa ładowanie, proszę czekać",
-    "PORTRAIT" : "Pionowe",
-    "LANDSCAPE" : "Poziome",
-    "SQUARISH" : "Kwadratowe",
-    "SHOW_MODAL_DETAILS" : "Pokaż okienko ze szczegółami",
-    "OPEN_IN_NEW_TAB" : "Otwórz w nowej zakładce",
-    "SHOW_IFRAME" : "Wyświetl szczegóły w ramce",
-    "EXAMPLE_SEARCH_TERM" : "np. waterfall",
-    "CREATED_LESS_THAN_TWO_WEEKS_AGO" : "Nie starsze niż 2 tygodnie"
+  "TOTAL_ITEMS": "Znalezione elementy",
+  "PHOTO_ID": "Identyfikator",
+  "PUBLICATION_DATE": "Data publikacji",
+  "AUTHOR": "Autor",
+  "VIEW": "Zobacz",
+  "IMAGE": "obraz",
+  "SEARCH_TERM": "szukana fraza",
+  "IMAGE_ORIENTATION": "orientacja obrazka",
+  "SHOW_ALL_HISTORY_ITEMS": "Pokaż wszystkie wyniki historii wyszukiwania",
+  "SHOW_HISTORY_SEARCH": "Pokaż historię wyszukiwania",
+  "SEARCH_HISTORY": "Historia wyszukiwania",
+  "CHANGE_LAYOUT": "Zmień układ listy",
+  "CHANGE_THEME": "Zmień kolorystykę",
+  "ADVANCED_SETTINGS": "Zaawansowane ustawienia",
+  "ADVANCED_SETTINGS_ALERT": "Poniższe ustawienia nie są zapisywane w pamięci podręcznej!",
+  "CHOOSE_IMAGE_DETAILS_MODE": "Wybierz sposób wyświetlania szczegółów",
+  "CROP_DESCRIPTION_AFTER_SECOND_LINE": "Skróć opisy do dwóch linijek w widoku siatki",
+  "DISABLE_THUMBNAILS_FIT": "Zablokuj dopasowanie miniaturek",
+  "PAGE": "Strona",
+  "FROM": "z",
+  "NO_IMAGES": "Nie znaleziono obrazków spełniających Twoje kryteria",
+  "IMAGE_DETAILS": "Szczegóły obrazka",
+  "DESCRIPTION": "Opis",
+  "USERNAME": "Nazwa użytkownika",
+  "WEBSITE": "Strona internetowa",
+  "CREATED_AT": "Utworzono",
+  "UPDATED_AT": "Zaktualizowano",
+  "WIDTH": "Szerokość",
+  "HEIGHT": "Wysokość",
+  "COLOR": "Kolor",
+  "DOWNLOADS": "Liczba pobrań",
+  "LIKES": "Liczba polubień",
+  "LOCATION": "Lokalizacja",
+  "CLOSE_MODAL": "Zamknij",
+  "FEEL_FREE_TO_USE": "Smiało korzystaj z",
+  "LOADING_PLEASE_WAIT": "Trwa ładowanie, proszę czekać",
+  "PORTRAIT": "Pionowe",
+  "LANDSCAPE": "Poziome",
+  "SQUARISH": "Kwadratowe",
+  "SHOW_MODAL_DETAILS": "Pokaż okienko ze szczegółami",
+  "OPEN_IN_NEW_TAB": "Otwórz w nowej zakładce",
+  "SHOW_IFRAME": "Wyświetl szczegóły w ramce",
+  "EXAMPLE_SEARCH_TERM": "np. waterfall",
+  "CREATED_LESS_THAN_TWO_WEEKS_AGO": "Nie starsze niż 2 tygodnie",
+  "CHANGE_LANGUAGE": "Zmień język",
+  "POLISH": "Polski",
+  "ENGLISH": "Angielski"
 }
